--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ li{
 	left:50px;
 	top:30px;
 	-webkit-transform-style:preserve-3d;
+	background:transparent;
 }
 .minbox li{
 	width:100px;
@@ -237,6 +238,7 @@ li{
 	left: 0;
 	top: -20px;
 	-webkit-transform-style: preserve-3d;
+	background:transparent;
 	
 }
 .maxbox li{
